@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-09-25T16:27:10Z",
+  "timestamp" : "2022-09-26T02:10:33Z",
   "count_outdated" : 2441,
   "uniques_outdated" : 608,
-  "count" : 2478,
+  "count" : 2477,
   "uniques" : 629,
   "clones" : [
     {
       "timestamp": "2022-09-12T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
