@@ -1,3 +1,11 @@
+2022-09-26T02:10:33Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3124606051
+* notice: last 14d: unq all: 7 36
+* notice: prev accum: outdated-unq outdated-all / unq all: 608 2441 / 629 2478
+* notice: next accum: outdated-unq outdated-all / unq all: 608 2441 / 629 2477
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +3 -0 -1 / 1 2
+* notice: removed / changed dates: [] / [2022-09-12]
+
 2022-09-25T16:27:10Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3122862774
 * notice: last 14d: unq all: 7 37
